--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 layout: default
+permalink: /404.html
 ---
 
 <style type="text/css" media="screen">
   .container {
-    margin: 10px auto;
-    max-width: 600px;
+    margin: 10px 0;
     text-align: center;
   }
   h1 {
@@ -17,8 +17,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+    <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+    <p><strong>Page not found :(</strong></p>
+    <p>The requested page could not be found.</p>
 </div>
