--- a/404.html
+++ b/404.html
@@ -4,16 +4,17 @@ permalink: /404.html
 ---
 
 <style type="text/css" media="screen">
-  .container {
-    margin: 10px 0;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+    .container {
+        text-align: center;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+    }
+  
+    h1 {
+        margin: 1.5rem 0;
+        font-size: 5em;
+        letter-spacing: -2px;
+    }
 </style>
 
 <div class="container">
