--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="jumbotron">
     <div class="container">
-        <img src="/assets/img/kappa.png" class="float-left" alt="Kappa Team Logo" />
+        <img src="/assets/img/kappa.png" class="float-left kappa-logo" alt="Kappa Team Logo" />
         <p><span class="kappa">Kappa</span> is CTF team from Saint Petersburg</p>
     </div>
 </div>
