--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="jumbotron">
+<div class="jumbotron main-header">
     <div class="container">
         <img src="/assets/img/kappa.png" class="float-left kappa-logo" alt="Kappa Team Logo" />
         <p><span class="kappa">Kappa</span> is CTF team from Saint Petersburg</p>
