--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="jumbotron main-header">
     <div class="container">
         <img src="/assets/img/kappa.png" class="float-left kappa-logo" alt="Kappa Team Logo" />
-        <a href="https://ctftime.org/team/1607/" rel="nofollow" target="_blank"><img src="//ctftime.org/static/img/s/16x16.png" border="0" alt="Join us on CTFtime"/></a><p><span class="kappa">Kappa</span> is CTF team from Saint Petersburg</p>
+        <p><a href="https://ctftime.org/team/1607/" rel="nofollow" target="_blank"><img src="//ctftime.org/static/img/s/16x16.png" border="0" alt="Join us on CTFtime"/></a><span class="kappa">Kappa</span> is CTF team from Saint Petersburg</p>
     </div>
 </div>
 
