fix mistakes in posts

--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@ layout: default
         <img src="/assets/img/kappa.png" class="float-left kappa-logo" alt="Kappa CTF Team Logo" />
         <p><strong>Kappa CTF Team</strong> — российское интернет-издание об образовательных событиях 
         в сфере информационной безопасности. Наши корреспонденты посещают CTF-соревнования, форумы,
-        конференции и другие мероприятия, и проводят прямые включения с места событий. Оперативное
-        освещение новостей и качественные материалы — главные направления работы издания.</p>
+        конференции и другие мероприятия, проводят оперативные прямые включения и пишут качественные
+        обзоры.</p>
     </div>
 </div>
 
