--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="container">
+<div class="container post-feed">
     {% for post in paginator.posts %}
     <div class="blog-post">
         <h1><a class="kappa" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h1>
