add disclaimer about age restrictions

--- a/about.html
+++ b/about.html
@@ -17,5 +17,7 @@ layout: default
     <p>Адрес для корреспонденции: г. Санкт-Петербург, 197022, до востребования.</p>
     <p>Адрес электронной почты: press@kappactf.ru</p>
     <p>Учредитель, главный редактор — Сычев Никита Владимирович.</p>
+
+    <p>В соответствии с федеральным законом «О защите детей от информации, причиняющей вред их здоровью и развитию» № 436-ФЗ от 29.12.2010 информационная продукция предназначена для детей, достигших возраста шестнадцати лет.</p>
 </div>
 
